[package]
name = "inline_tweak"
version = "1.0.9"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"
keywords = ["gamedev", "tweak", "inline", "config", "tool"]
description = "Tweak values directly from the source code"
license = "CC0-1.0"
readme = "README.md"
categories = [
    "config",
    "game-development",
    "development-tools",
    "rust-patterns",
]
repository = "https://github.com/Uriopass/inline_tweak"

[dependencies]
lazy_static = "1.4.0"

[features]
default = []
release_tweak = []

[[example]]
name = "release"
required-features = ["release_tweak"]
