[package]
name = "inline_tweak_derive"
version = "1.0.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"

[lib]
name = "inline_tweak_derive"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", default-features = false, features = ["parsing", "proc-macro", "visit-mut", "full", "printing"]}
quote = "1.0"
proc-macro2 = "1.0"

[features]
release_tweak = []