[package]
name = "inline_tweak_derive"
version = "1.0.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"
description = "Macro code generation for inline_tweak"
repository = "https://github.com/Uriopass/inline_tweak"
license = "CC0-1.0"
readme = "README.md"

[lib]
name = "inline_tweak_derive"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", default-features = false, features = ["parsing", "proc-macro", "visit-mut", "full", "printing"]}
quote = { version = "1.0", features = [] }
proc-macro2 = "1.0"

[features]
release_tweak = []